parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLAS
    DOSPUNTOS

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencia_for
Rule 2     sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for PARENTESIS_DER bloque
Rule 3     declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for
Rule 4     condicion_for -> IDENTIFICADOR MENOR_IGUAL NUMERO
Rule 5     incremento_for -> IDENTIFICADOR MAS MAS
Rule 6     incremento_for -> IDENTIFICADOR MAS
Rule 7     bloque -> LLAVE_IZQ sentencia_imprimir LLAVE_DER
Rule 8     sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA
Rule 9     expresion_concatenacion -> CADENA_TEXTO
Rule 10    expresion_concatenacion -> CADENA_TEXTO MAS expresion_concatenacion
Rule 11    expresion_concatenacion -> expresion_concatenacion MAS expresion_concatenacion
Rule 12    expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO
Rule 13    expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR
Rule 14    expresion_concatenacion -> IDENTIFICADOR
Rule 15    cadena -> IDENTIFICADOR
Rule 16    cadena -> cadena IDENTIFICADOR
Rule 17    cadena -> cadena MAYOR_QUE
Rule 18    cadena -> cadena MENOR_IGUAL
Rule 19    cadena -> cadena IGUAL
Rule 20    cadena -> cadena MAS
Rule 21    cadena -> cadena PUNTO
Rule 22    cadena -> cadena PUNTO_COMA
Rule 23    cadena -> cadena NUMERO
Rule 24    cadena -> <empty>

Terminals, with rules where they appear

CADENA_TEXTO         : 9 10 12
COMILLAS             : 
DOSPUNTOS            : 
IDENTIFICADOR        : 3 4 5 6 13 14 15 16
IGUAL                : 3 19
LLAVE_DER            : 7
LLAVE_IZQ            : 7
MAS                  : 5 5 6 10 11 12 13 20
MAYOR_QUE            : 17
MENOR_IGUAL          : 4 18
NUMERO               : 3 4 23
PALABRA_RESERVADA    : 2 3 8 8 8
PARENTESIS_DER       : 2 8
PARENTESIS_IZQ       : 2 8
PUNTO                : 8 8 21
PUNTO_COMA           : 3 3 8 22
error                : 

Nonterminals, with rules where they appear

bloque               : 2
cadena               : 16 17 18 19 20 21 22 23
condicion_for        : 3
declaracion_for      : 2
expresion_concatenacion : 8 10 11 11 12 13
incremento_for       : 3
programa             : 0
sentencia_for        : 1
sentencia_imprimir   : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencia_for
    (2) sentencia_for -> . PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for PARENTESIS_DER bloque

    PALABRA_RESERVADA shift and go to state 3

    programa                       shift and go to state 1
    sentencia_for                  shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencia_for .

    $end            reduce using rule 1 (programa -> sentencia_for .)


state 3

    (2) sentencia_for -> PALABRA_RESERVADA . PARENTESIS_IZQ declaracion_for PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 4


state 4

    (2) sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ . declaracion_for PARENTESIS_DER bloque
    (3) declaracion_for -> . PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for

    PALABRA_RESERVADA shift and go to state 5

    declaracion_for                shift and go to state 6

state 5

    (3) declaracion_for -> PALABRA_RESERVADA . IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for

    IDENTIFICADOR   shift and go to state 7


state 6

    (2) sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for . PARENTESIS_DER bloque

    PARENTESIS_DER  shift and go to state 8


state 7

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR . IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for

    IGUAL           shift and go to state 9


state 8

    (2) sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for PARENTESIS_DER . bloque
    (7) bloque -> . LLAVE_IZQ sentencia_imprimir LLAVE_DER

    LLAVE_IZQ       shift and go to state 11

    bloque                         shift and go to state 10

state 9

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL . NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for

    NUMERO          shift and go to state 12


state 10

    (2) sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for PARENTESIS_DER bloque .

    $end            reduce using rule 2 (sentencia_for -> PALABRA_RESERVADA PARENTESIS_IZQ declaracion_for PARENTESIS_DER bloque .)


state 11

    (7) bloque -> LLAVE_IZQ . sentencia_imprimir LLAVE_DER
    (8) sentencia_imprimir -> . PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PALABRA_RESERVADA shift and go to state 14

    sentencia_imprimir             shift and go to state 13

state 12

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO . PUNTO_COMA condicion_for PUNTO_COMA incremento_for

    PUNTO_COMA      shift and go to state 15


state 13

    (7) bloque -> LLAVE_IZQ sentencia_imprimir . LLAVE_DER

    LLAVE_DER       shift and go to state 16


state 14

    (8) sentencia_imprimir -> PALABRA_RESERVADA . PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PUNTO           shift and go to state 17


state 15

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA . condicion_for PUNTO_COMA incremento_for
    (4) condicion_for -> . IDENTIFICADOR MENOR_IGUAL NUMERO

    IDENTIFICADOR   shift and go to state 18

    condicion_for                  shift and go to state 19

state 16

    (7) bloque -> LLAVE_IZQ sentencia_imprimir LLAVE_DER .

    $end            reduce using rule 7 (bloque -> LLAVE_IZQ sentencia_imprimir LLAVE_DER .)


state 17

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO . PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PALABRA_RESERVADA shift and go to state 20


state 18

    (4) condicion_for -> IDENTIFICADOR . MENOR_IGUAL NUMERO

    MENOR_IGUAL     shift and go to state 21


state 19

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for . PUNTO_COMA incremento_for

    PUNTO_COMA      shift and go to state 22


state 20

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA . PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PUNTO           shift and go to state 23


state 21

    (4) condicion_for -> IDENTIFICADOR MENOR_IGUAL . NUMERO

    NUMERO          shift and go to state 24


state 22

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA . incremento_for
    (5) incremento_for -> . IDENTIFICADOR MAS MAS
    (6) incremento_for -> . IDENTIFICADOR MAS

    IDENTIFICADOR   shift and go to state 25

    incremento_for                 shift and go to state 26

state 23

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO . PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PALABRA_RESERVADA shift and go to state 27


state 24

    (4) condicion_for -> IDENTIFICADOR MENOR_IGUAL NUMERO .

    PUNTO_COMA      reduce using rule 4 (condicion_for -> IDENTIFICADOR MENOR_IGUAL NUMERO .)


state 25

    (5) incremento_for -> IDENTIFICADOR . MAS MAS
    (6) incremento_for -> IDENTIFICADOR . MAS

    MAS             shift and go to state 28


state 26

    (3) declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for .

    PARENTESIS_DER  reduce using rule 3 (declaracion_for -> PALABRA_RESERVADA IDENTIFICADOR IGUAL NUMERO PUNTO_COMA condicion_for PUNTO_COMA incremento_for .)


state 27

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA . PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA

    PARENTESIS_IZQ  shift and go to state 29


state 28

    (5) incremento_for -> IDENTIFICADOR MAS . MAS
    (6) incremento_for -> IDENTIFICADOR MAS .

    MAS             shift and go to state 30
    PARENTESIS_DER  reduce using rule 6 (incremento_for -> IDENTIFICADOR MAS .)


state 29

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ . expresion_concatenacion PARENTESIS_DER PUNTO_COMA
    (9) expresion_concatenacion -> . CADENA_TEXTO
    (10) expresion_concatenacion -> . CADENA_TEXTO MAS expresion_concatenacion
    (11) expresion_concatenacion -> . expresion_concatenacion MAS expresion_concatenacion
    (12) expresion_concatenacion -> . expresion_concatenacion MAS CADENA_TEXTO
    (13) expresion_concatenacion -> . expresion_concatenacion MAS IDENTIFICADOR
    (14) expresion_concatenacion -> . IDENTIFICADOR

    CADENA_TEXTO    shift and go to state 32
    IDENTIFICADOR   shift and go to state 33

    expresion_concatenacion        shift and go to state 31

state 30

    (5) incremento_for -> IDENTIFICADOR MAS MAS .

    PARENTESIS_DER  reduce using rule 5 (incremento_for -> IDENTIFICADOR MAS MAS .)


state 31

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion . PARENTESIS_DER PUNTO_COMA
    (11) expresion_concatenacion -> expresion_concatenacion . MAS expresion_concatenacion
    (12) expresion_concatenacion -> expresion_concatenacion . MAS CADENA_TEXTO
    (13) expresion_concatenacion -> expresion_concatenacion . MAS IDENTIFICADOR

    PARENTESIS_DER  shift and go to state 34
    MAS             shift and go to state 35


state 32

    (9) expresion_concatenacion -> CADENA_TEXTO .
    (10) expresion_concatenacion -> CADENA_TEXTO . MAS expresion_concatenacion

  ! shift/reduce conflict for MAS resolved as shift
    PARENTESIS_DER  reduce using rule 9 (expresion_concatenacion -> CADENA_TEXTO .)
    MAS             shift and go to state 36

  ! MAS             [ reduce using rule 9 (expresion_concatenacion -> CADENA_TEXTO .) ]


state 33

    (14) expresion_concatenacion -> IDENTIFICADOR .

    PARENTESIS_DER  reduce using rule 14 (expresion_concatenacion -> IDENTIFICADOR .)
    MAS             reduce using rule 14 (expresion_concatenacion -> IDENTIFICADOR .)


state 34

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 37


state 35

    (11) expresion_concatenacion -> expresion_concatenacion MAS . expresion_concatenacion
    (12) expresion_concatenacion -> expresion_concatenacion MAS . CADENA_TEXTO
    (13) expresion_concatenacion -> expresion_concatenacion MAS . IDENTIFICADOR
    (9) expresion_concatenacion -> . CADENA_TEXTO
    (10) expresion_concatenacion -> . CADENA_TEXTO MAS expresion_concatenacion
    (11) expresion_concatenacion -> . expresion_concatenacion MAS expresion_concatenacion
    (12) expresion_concatenacion -> . expresion_concatenacion MAS CADENA_TEXTO
    (13) expresion_concatenacion -> . expresion_concatenacion MAS IDENTIFICADOR
    (14) expresion_concatenacion -> . IDENTIFICADOR

    CADENA_TEXTO    shift and go to state 39
    IDENTIFICADOR   shift and go to state 40

    expresion_concatenacion        shift and go to state 38

state 36

    (10) expresion_concatenacion -> CADENA_TEXTO MAS . expresion_concatenacion
    (9) expresion_concatenacion -> . CADENA_TEXTO
    (10) expresion_concatenacion -> . CADENA_TEXTO MAS expresion_concatenacion
    (11) expresion_concatenacion -> . expresion_concatenacion MAS expresion_concatenacion
    (12) expresion_concatenacion -> . expresion_concatenacion MAS CADENA_TEXTO
    (13) expresion_concatenacion -> . expresion_concatenacion MAS IDENTIFICADOR
    (14) expresion_concatenacion -> . IDENTIFICADOR

    CADENA_TEXTO    shift and go to state 32
    IDENTIFICADOR   shift and go to state 33

    expresion_concatenacion        shift and go to state 41

state 37

    (8) sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA .

    LLAVE_DER       reduce using rule 8 (sentencia_imprimir -> PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PUNTO PALABRA_RESERVADA PARENTESIS_IZQ expresion_concatenacion PARENTESIS_DER PUNTO_COMA .)


state 38

    (11) expresion_concatenacion -> expresion_concatenacion MAS expresion_concatenacion .
    (11) expresion_concatenacion -> expresion_concatenacion . MAS expresion_concatenacion
    (12) expresion_concatenacion -> expresion_concatenacion . MAS CADENA_TEXTO
    (13) expresion_concatenacion -> expresion_concatenacion . MAS IDENTIFICADOR

    PARENTESIS_DER  reduce using rule 11 (expresion_concatenacion -> expresion_concatenacion MAS expresion_concatenacion .)
    MAS             reduce using rule 11 (expresion_concatenacion -> expresion_concatenacion MAS expresion_concatenacion .)

  ! MAS             [ shift and go to state 35 ]


state 39

    (12) expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO .
    (9) expresion_concatenacion -> CADENA_TEXTO .
    (10) expresion_concatenacion -> CADENA_TEXTO . MAS expresion_concatenacion

  ! reduce/reduce conflict for MAS resolved using rule 9 (expresion_concatenacion -> CADENA_TEXTO .)
  ! reduce/reduce conflict for PARENTESIS_DER resolved using rule 9 (expresion_concatenacion -> CADENA_TEXTO .)
  ! shift/reduce conflict for MAS resolved as shift
    PARENTESIS_DER  reduce using rule 9 (expresion_concatenacion -> CADENA_TEXTO .)
    MAS             shift and go to state 36

  ! PARENTESIS_DER  [ reduce using rule 12 (expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO .) ]
  ! MAS             [ reduce using rule 12 (expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO .) ]
  ! MAS             [ reduce using rule 9 (expresion_concatenacion -> CADENA_TEXTO .) ]


state 40

    (13) expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR .
    (14) expresion_concatenacion -> IDENTIFICADOR .

  ! reduce/reduce conflict for MAS resolved using rule 13 (expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR .)
  ! reduce/reduce conflict for PARENTESIS_DER resolved using rule 13 (expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR .)
    PARENTESIS_DER  reduce using rule 13 (expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR .)
    MAS             reduce using rule 13 (expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR .)

  ! MAS             [ reduce using rule 14 (expresion_concatenacion -> IDENTIFICADOR .) ]
  ! PARENTESIS_DER  [ reduce using rule 14 (expresion_concatenacion -> IDENTIFICADOR .) ]


state 41

    (10) expresion_concatenacion -> CADENA_TEXTO MAS expresion_concatenacion .
    (11) expresion_concatenacion -> expresion_concatenacion . MAS expresion_concatenacion
    (12) expresion_concatenacion -> expresion_concatenacion . MAS CADENA_TEXTO
    (13) expresion_concatenacion -> expresion_concatenacion . MAS IDENTIFICADOR

    PARENTESIS_DER  reduce using rule 10 (expresion_concatenacion -> CADENA_TEXTO MAS expresion_concatenacion .)
    MAS             reduce using rule 10 (expresion_concatenacion -> CADENA_TEXTO MAS expresion_concatenacion .)

  ! MAS             [ shift and go to state 35 ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for MAS in state 32 resolved as shift
WARNING: shift/reduce conflict for MAS in state 39 resolved as shift
WARNING: reduce/reduce conflict in state 39 resolved using rule (expresion_concatenacion -> CADENA_TEXTO)
WARNING: rejected rule (expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO) in state 39
WARNING: reduce/reduce conflict in state 40 resolved using rule (expresion_concatenacion -> expresion_concatenacion MAS IDENTIFICADOR)
WARNING: rejected rule (expresion_concatenacion -> IDENTIFICADOR) in state 40
WARNING: Rule (expresion_concatenacion -> expresion_concatenacion MAS CADENA_TEXTO) is never reduced
